--- a/scc/style.css
+++ b/scc/style.css
@@ -5,6 +5,7 @@
     width: 640px;
 
 }
+
 .square{
     width: 80px;
     height: 80px;
@@ -13,16 +14,60 @@
     align-items: center;
     justify-content: center;
 }
+
 .black{
     background-color: #999;
 }
+
 .white{
     background-color: #eee;
 }
+
 .figure{
     font-size: 60px;
     cursor: pointer;
 }
-body{
+
+html,body{
+    height: 100%;
     background: antiquewhite;
+}
+
+.wrapper{
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+header{
+    color: blue;
+   text-align: center;
+}
+
+main{
+    flex:1 1 auto;
+}
+
+.buttonNew ,
+.buttonFlip{
+    height: 40px;
+    width: 100px;
+    font-size: 20px;
+}
+footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    height: 10%;
+    background-color:  rgb(75, 75, 138);
+}
+footer p{
+    padding-left: 10px;
+}
+.small_text{
+font-size: 15px;
+}
+
+.red{
+    color: rgb(241, 210, 71);
 }
